--- a/index.html
+++ b/index.html
@@ -2,45 +2,54 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IVO – Music Producer</title>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      color: white;
-      background: black;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #000;
+      color: #fff;
     }
 
     header {
       position: absolute;
       width: 100%;
-      top: 20px;
+      padding: 20px 30px;
       display: flex;
       justify-content: space-between;
-      padding: 0 40px;
-      color: white;
-      z-index: 2;
+      align-items: center;
+      z-index: 10;
     }
 
     header nav a {
-      margin-left: 20px;
       color: white;
+      margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
     }
 
     .hero {
-      position: relative;
+      width: 100%;
       height: 100vh;
       background: url('FOTO.jpg') center center / cover no-repeat;
     }
 
     .info {
-      position: relative;
-      background: black;
-      padding: 60px 40px;
+      padding: 40px 20px;
+      background-color: black;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .info p {
+      margin-bottom: 12px;
+      line-height: 1.6;
     }
 
     .info a {
@@ -48,8 +57,24 @@
       text-decoration: underline;
     }
 
-    .info p {
-      margin: 0 0 10px 0;
+    @media screen and (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
+
+      header nav {
+        margin-top: 10px;
+      }
+
+      header nav a {
+        margin: 0 10px 0 0;
+      }
+
+      .info {
+        padding: 30px 15px;
+      }
     }
   </style>
 </head>
@@ -67,18 +92,4 @@
   <div class="hero"></div>
 
   <div class="info">
-    <p>Producción musical con identidad. </p>
-    <p>Grabación, mezcla y dirección creativa.</p>
-
-    <p><strong>Algunos créditos:</strong></p>
-    <p><a href="https://open.spotify.com" target="_blank">Spotify</a> – 
-       <a href="https://music.apple.com" target="_blank">Apple Music</a> – 
-       <a href="#">YouTube</a></p>
-
-    <p><strong>Contacto:</strong></p>
-    <p>Email: ivo@tucorreo.com</p>
-    <p>Instagram: <a href="https://instagram.com/tuusuario" target="_blank">@tuusuario</a></p>
-  </div>
-
-</body>
-</html>
+    <p><strong>Producción musical
