--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('IvoproduciendoconEuge.png') center/cover no-repeat;
+      background: url('/IvoproduciendoconEuge.png') center/cover no-repeat;
     }
 
     /* Capa oscura para legibilidad */
@@ -62,6 +62,7 @@
       margin-top: 28px;
       border-radius:12px;
       overflow:hidden;
+      height: 100%;
     }
 
     /* MOBILE AJUSTES EXTRA */
