--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('/IvoproduciendoconEuge.png') center/cover no-repeat;
+      background: url('IvoproduciendoconEuge.png') center/cover no-repeat;
     }
 
     /* Capa oscura para legibilidad */
@@ -76,7 +76,7 @@
   <section class="hero">
     <div class="content">
       <h1>IVO PAOLANTONIO</h1>
-      <h2>PRODUCER. COMPOSITOR. MIXER.</h2>
+      <h2>PRODUCTOR. COMPOSITOR. MIXER.</h2>
 
       <div class="socials">
         <a href="https://open.spotify.com/user/tuusuario" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
