--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       inset:0;
       background:rgba(0,0,0,.55);
       backdrop-filter: blur(2px);
+      opacity: 50%;
     }
 
     /* CONTENIDO CENTRADO */
