--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('IvoproduciendoconEuge.png') center/cover no-repeat;
+      background: url('IvoproduciendoconEuge.png');
     }
 
     /* Capa oscura para legibilidad */
