--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('IvoproduciendoconEuge.png');
+      background: url('IvoproduciendoconEuge.png') center center / cover no-repeat;
     }
 
     /* Capa oscura para legibilidad */
@@ -29,7 +29,6 @@
       inset:0;
       background:rgba(0,0,0,.55);
       backdrop-filter: blur(2px);
-      opacity: 50%;
     }
 
     /* CONTENIDO CENTRADO */
