--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       content:'';
       position:absolute;
       inset:0;
-      background: #000000;
+      background: black;
       backdrop-filter: blur(2px);
     }
 
