--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('IvoproduciendoconEuge.png') center center / cover no-repeat;
     }
 
     /* Capa oscura para legibilidad */
@@ -75,6 +74,7 @@
 
   <section class="hero">
     <div class="content">
+      <img src="IvoproduciendoconEuge.png" alt="Ivo Produciendo" class="hero-image" />    
       <h1>IVO PAOLANTONIO</h1>
       <h2>PRODUCTOR. COMPOSITOR. MIXER.</h2>
 
