--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
         <a href="https://instagram.com/tuusuario" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
 
+      <a href="mailto:thesoundofivo@gmail.com" style="color: #fff; text-decoration: underline; margin-top: 20px; display: inline-block;">Contacto</a>
+
       <div class="playlist">
-        <iframe style="border:none;width:100%;height:100%;" src="https://open.spotify.com/embed/playlist/3aUy6nrtYQJ7GoSMb8DbVH?utm_source=generator"
-          loading="lazy" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <iframe style="border:none;width:100%;height:100%;" src="https://open.spotify.com/embed/playlist/3aUy6nrtYQJ7GoSMb8DbVH?utm_source=generator"
+    loading="lazy" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
+
     </div>
   </section>
 
