--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     loading="lazy" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
 
-      <a href="mailto:thesoundofivo@gmail.com" style="color: #fff; text-decoration: underline; margin-top: 20px; display: inline-block;">CONTACTO</a>
+      <a href="mailto:thesoundofivo@gmail.com" style="color: #fff; text-decoration: none; margin-top: 20px; display: inline-block; font-weight: bold;">CONTACTO</a>
 
     </div>
   </section>
