--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       content:'';
       position:absolute;
       inset:0;
-      background-image: url('https://i.ibb.co/0qGcVQJ/fondo-ivo.jpg'); /* link directo de la imagen */
+      background-image: url('https://i.ibb.co/hxXVYsD5/Ivo-produciendo-con-Euge-de-fondo.png'); /* link directo de la imagen */
       backdrop-filter: blur(2px);
     }
 
