--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { height: 100%; font-family: 'Helvetica Neue', Arial, sans-serif; color:#fff; }
+    html, body {
+      height: 100%;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      color: #fff;
+    }
 
     .hero {
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url('/mnt/data/2789e2b9-5c9f-44e9-a614-b57e87d78844.png');
+      overflow: hidden;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background-image: url('/mnt/data/6714194b-d093-4ba4-8486-a733d2632f9e.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       filter: grayscale(100%);
-    }
-
-    .hero::before {
-      content:'';
-      position:absolute;
-      inset:0;
-      background: rgba(0, 0, 0, 0.4); /* oscurece un poco para legibilidad */
-      backdrop-filter: blur(2px);
       z-index: 0;
     }
 
@@ -86,6 +89,7 @@
   </style>
 </head>
 <body>
+
   <section class="hero">
     <div class="content">
       <h1>IVO PAOLANTONIO</h1>
@@ -107,5 +111,6 @@
       <a href="mailto:thesoundofivo@gmail.com">CONTACTO</a>
     </div>
   </section>
+
 </body>
 </html>
