--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-image: url('/mnt/data/6714194b-d093-4ba4-8486-a733d2632f9e.png');
+      background-image: url('https://i.ibb.co/hxXVYsD5/Ivo-produciendo-con-Euge-de-fondo.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
