--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-image: url('https://i.ibb.co/9mwWZnsX/Ivo-produciendo-con-Euge-de-fondo.png');
+      background-color: black;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
