--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <h2>PRODUCTOR. COMPOSITOR. MIXER.</h2>
 
       <div class="socials">
-        <a href="https://open.spotify.com/user/tuusuario" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
-        <a href="https://instagram.com/tuusuario" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://open.spotify.com/intl-es/artist/6CFMZMSvQBeozuwyZLQe9z" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
+        <a href=https://www.instagram.com/ivosoyivo/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
 
       <div class="playlist">
