--- a/index.html
+++ b/index.html
@@ -100,13 +100,7 @@
         <a href=https://www.instagram.com/ivosoyivo/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
 
-      <div class="playlist">
-        <iframe style="border:none;width:100%;height:100%;" 
-          src="https://open.spotify.com/embed/playlist/3aUy6nrtYQJ7GoSMb8DbVH?utm_source=generator"
-          loading="lazy" 
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-        </iframe>
-      </div>
+      <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/artist/6CFMZMSvQBeozuwyZLQe9z?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
       <a href="mailto:thesoundofivo@gmail.com">CONTACTO</a>
     </div>
