--- a/produccion.html
+++ b/produccion.html
@@ -104,6 +104,10 @@
   <section class="hero">
       <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/artist/6CFMZMSvQBeozuwyZLQe9z?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </section>
+  
+  <section>
+  <a class="cta-btn" href="https://wa.me/549XXXXXXXXXX" target="_blank">Trabajemos juntos</a>
+  </section>
 
   <!-- EXPERIENCIA -->
   <section class="experience">
@@ -131,6 +135,10 @@
     <a href="https://open.spotify.com/artist/6CFMZMSvQBeozuwyZLQe9z" target="_blank"><i class="fab fa-spotify"></i></a>
     <a href="https://www.instagram.com/ivosoyivo/" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="mailto:thesoundofivo@gmail.com"><i class="fas fa-envelope"></i></a>
+  </section>
+
+  <section>
+  <a class="cta-btn" href="https://wa.me/549XXXXXXXXXX" target="_blank">Trabajemos juntos</a>
   </section>
 
 </body>
