--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="https://open.spotify.com/intl-es/artist/6CFMZMSvQBeozuwyZLQe9z" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
         <a href=https://www.instagram.com/ivosoyivo/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
-
+      <a class="cta-btn" href="https://thesoundofivo.github.io/portoflio/produccion.html" target="_blank">Trabajemos juntos</a>
       <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/artist/6CFMZMSvQBeozuwyZLQe9z?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
       <a href="mailto:thesoundofivo@gmail.com">CONTACTO</a>
