--- a/index.html
+++ b/index.html
@@ -14,24 +14,51 @@
       color: #fff;
     }
 
+    /* HERO con video */
     .hero {
       position: relative;
-      width: 100%;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
       overflow: hidden;
     }
-
-    .hero::before {
-      content: "";
+    .hero video {
       position: absolute;
-      inset: 0;
-      background-color: black;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: grayscale(100%);
-      z-index: 0;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      object-fit: cover;
+      z-index: -1;
+      filter: brightness(0.4);
     }
+    .hero-content {
+      z-index: 1;
+      max-width: 700px;
+      padding: 0 20px;
+    }
+    .hero h1 {
+      font-size: clamp(36px, 6vw, 64px);
+      color: #f2c94c;
+      font-weight: 700;
+      margin-bottom: 16px;
+    }
+    .hero p {
+      font-size: clamp(16px, 2.5vw, 22px);
+      line-height: 1.4;
+      margin-bottom: 24px;
+    }
+    .cta-btn {
+      background: #f2c94c;
+      color: #000;
+      padding: 14px 28px;
+      border-radius: 6px;
+      font-weight: bold;
+      text-decoration: none;
+      display: inline-block;
+      transition: background 0.2s;
+    }
+    .cta-btn:hover { background: #d6aa2f; }
 
     .content {
       position: relative;
